@@ -1,3 +1,10 @@
+2004-08-25  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkfilechooserdefault.c (check_is_folder): Use get_file_info() rather 
+	than trying get_folder() and checking for an error directly because older 
+	versions of the gnome-vfs backend don't return an error 
+	immediately.  (#150852, Zack Cerza )
+
 2004-08-24  Matthias Clasen  <mclasen@redhat.com>
 
 	* NEWS: Update for 2.4.8
